# my-app

./: .gitignore  LICENSE  README.md  docker-compose.yaml
.claude/: settings.local.json
.github/workflows/: build-and-push.yaml
argocd/: application.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: ai.py  auth.py  games.py  puzzles.py  router.py
backend/app/core/: database.py  security.py
backend/app/models/: __init__.py  game.py  leaderboard.py  multiplayer.py  puzzle.py  user.py
backend/app/schemas/: __init__.py  ai.py  game.py  puzzle.py  user.py
backend/app/services/: ai_service.py  game_service.py  puzzle_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useGame.ts
frontend/src/pages/: HomePage.tsx
k8s/base/: kustomization.yaml  namespace.yaml
k8s/base/backend/: configmap.yaml  deployment.yaml  route.yaml  service.yaml
k8s/base/frontend/: configmap.yaml  deployment.yaml  route.yaml  service.yaml
k8s/base/ollama/: deployment.yaml  (+2 more)
my-app/: backend-deployment.yaml  backend-route.yaml  backend-service.yaml  configmaps.yaml  deployment.yaml  frontend-deployment.yaml  frontend-route.yaml  frontend-service.yaml  kustomization.yaml  ollama-deployment.yaml  ollama-pvc.yaml  ollama-service.yaml  postgresql-service.yaml  postgresql-statefulset.yaml  redis-deployment.yaml  redis-service.yaml  route.yaml  secrets.yaml  secrets.yaml.template  service.yaml
(+14 files in other folders)
